cs229: Work on problem set 1.
I am ready to finish problem 1, but I'm frustrated by trying to use octave on
macOS. The graphing functions are ancient, look bad, and are difficult to use.
Because of that, I'm thinking of switching over to numpy from here on out. I may
go back to matlab/octave for problems that don't involve any graphing, although
even then the ability to graph is nice for debugging and sanity checking
purposes.

--- a/ml_notes/cs229/cs229hw.tex
+++ b/ml_notes/cs229/cs229hw.tex
@@ -132,6 +132,72 @@ Thus we can use repeated-index summation notation to arrive at
 
 This completes this part of the problem.
 
+\subsubsection{Part (b)}\label{part-b}
+
+Here is a matlab script to solve this part of the problem:
+
+\begin{verbatim}
+% problem1_1b.m
+%
+% Run Newton's method on a given cost function for a logistic
+% regression setup.
+%
+
+printf('Running problem1_1b.m\n');
+
+% Be able to compute J.
+function val = J(Z, theta)
+  [m, _] = size(Z);
+  g      = 1 ./ (1 + exp(Z * theta));
+  val    = -sum(log(g)) / m;
+end
+
+% Setup.
+X      = load('logistic_x.txt');
+[m, n] = size(X);
+X      = [ones(m, 1) X];
+Y      = load('logistic_y.txt');
+Z      = diag(Y) * X;
+
+% Initialize the parameters to learn.
+old_theta =  ones(n + 1, 1);
+theta     = zeros(n + 1, 1);
+i         = 1;  % i = iteration number.
+
+% Perform Newton's method.
+while norm(old_theta - theta) > 1e-5
+  printf('J = %g\n', J(Z, theta));
+  printf('theta:\n');
+  disp(theta);
+  printf('Running iteration %d\n', i);
+
+  g         = 1 ./ (1 + exp(Z * theta));
+  f         = (1 - g);
+  alpha     = f .* g;
+  A         = diag(alpha);
+  H         = Z' * A * Z / m;
+  nabla     = Z' * f / m;
+  old_theta = theta;
+  theta     = theta - inv(H) *  nabla;
+
+  i++;
+end
+
+% Show and save output.
+printf('Final theta:\n');
+disp(theta);
+save('theta.mat', 'theta');
+\end{verbatim}
+
+The final value of \(\th\) that I arrived at is
+
+\[\th = (2.62051, -0.76037, -1.17195).\]
+
+The first value \(\th_0\) represents the constant term, so that the
+final model is given by
+
+\[y = g(2.62 - 0.76x_1 - 1.17x_2).\]
+
 \subsection{Poisson regression and the exponential
 family}\label{poisson-regression-and-the-exponential-family}
 
