cs229: work on problem 1.2.

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -467,7 +467,7 @@ Then the update rule ([@eq:glm_gradient_update]) becomes
 
 $$\th := \th + \alpha(y-\th^Tx)x,$$
 
-which is just gradient ascient applied to least squares.
+which is just gradient ascent applied to least squares.
 
 ### Logistic regression GLM
 
