--- a/ml_notes/cs229/cs229.tex
+++ b/ml_notes/cs229/cs229.tex
@@ -568,7 +568,7 @@ In this case, \(a(\eta) = \eta^2/2\) so \(a'(\eta) = \eta\); and
 
 \[\th := \th + \alpha(y-\th^Tx)x,\]
 
-which is just gradient ascient applied to least squares.
+which is just gradient ascent applied to least squares.
 
 \subsubsection{Logistic regression GLM}\label{logistic-regression-glm}
 
