cs229: Solve 3(a) in problem set 1.

--- a/ml_notes/cs229/cs229hw.tex
+++ b/ml_notes/cs229/cs229hw.tex
@@ -343,4 +343,14 @@ Since this identity is true for all values of \(\eta,\) we can take
 Thus we can conclude that \(E[y] = a'(\eta) = a'(\th^Tx),\) which
 completes the solution.
 
+\subsection{Gaussian discriminant
+analysis}\label{gaussian-discriminant-analysis}
+
+\subsubsection{Part (a)}\label{part-a-2}
+
+This problem is to show that a two-class GDA solution effectively
+provides a model that takes the form of a logistic function, similar to
+logistic regression. This is something I already did in section 2.1 of
+\href{http://tylerneylon.com/notes/cs229/cs229.html}{my notes}.
+
 \end{document}
