cs229: Add solution for 4(a) in ps1.

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -554,7 +554,7 @@ of the needed form, confirming the goal ([@eq:gda_goal]).
 
 TODO Any remaining notes from lecture notes 2.
 
-# One lecture notes 3
+# On lecture notes 3
 
 ## Support vector machines
 
