cs229: Finish problem 4 in ps1.

--- a/ml_notes/cs229/cs229.tex
+++ b/ml_notes/cs229/cs229.tex
@@ -656,7 +656,7 @@ goal (\ref{eq:gda_goal}).
 
 TODO Any remaining notes from lecture notes 2.
 
-\section{One lecture notes 3}\label{one-lecture-notes-3}
+\section{On lecture notes 3}\label{on-lecture-notes-3}
 
 \subsection{Support vector machines}\label{support-vector-machines}
 
