cs229: notes on why kernels are called kernels.

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -636,3 +636,42 @@ $$f(x, y_0) \le f(x_0, y_0) \le f(x_0, y) \quad \forall x, y,$$
 then
 
 $$\max_x \min_y f(x, y) \; = \; \min_y \max_x f(x, y).$$
+
+### The name of kernels
+
+Quick side question: Why are kernels called kernels?
+
+I found
+[this
+link](http://math.stackexchange.com/questions/500920/word-origin-meaning-of-kernel-in-linear-algebra)
+which states that the word *kernel*, in mathematics, was first used
+in the context of a group homomorphism $f$ to indicate the set
+$f^{-1}(0),$ the pre-image of the identity element.
+Interpreting the word *kernel* as meaning something like *core* or *seed*,
+this usage in group theory makes sense when thinking about
+[the first isomorphism
+theorem](https://en.wikipedia.org/wiki/Fundamental_theorem_on_homomorphisms#Group_theoretic_version).
+
+In the context of SVMs, the name *kernel* comes from the idea of a
+[positive-definite
+kernel](https://en.wikipedia.org/wiki/Positive-definite_kernel),
+which originated mainly in work done by James Mercer, although as far as I can
+tell the actual name *positive-definite kernel* came from a 1904 paper of David
+Hilbert on Fredholm integral equations of the second kind.
+
+Based on
+[this math.stackexchange answer](http://math.stackexchange.com/a/1281138/10785),
+it sounds like the group-theoretic and algebraic use cases — that is, the two
+listed above — of the word *kernel* are not formally linked.
+Rather, it seems that Ivar Fredholm used the French word *noyau* in a
+paper on integral equations that later became *kernel* in the aforementioned
+paper of Hilbert. *Noyau* roughly means *core*, and was perhaps used because it
+is inside an integral when a convolution is performed. The referenced answer
+states that the original Hilbert paper never justifies the term, so I suppose
+it's up to folks who understand that paper to make an educated guess as to why
+it was chosen; or by looking at the corresponding Fredholm paper.
+
+### The Gaussian kernel
+
+NEXT: justify why this is a kernel
+
