--- a/ml_notes/cs229/cs229.tex
+++ b/ml_notes/cs229/cs229.tex
@@ -741,6 +741,44 @@ then
 
 \[\max_x \min_y f(x, y) \; = \; \min_y \max_x f(x, y).\]
 
+\subsubsection{The name of kernels}\label{the-name-of-kernels}
+
+Quick side question: Why are kernels called kernels?
+
+I found
+\href{http://math.stackexchange.com/questions/500920/word-origin-meaning-of-kernel-in-linear-algebra}{this
+link} which states that the word \emph{kernel}, in mathematics, was
+first used in the context of a group homomorphism \(f\) to indicate the
+set \(f^{-1}(0),\) the pre-image of the identity element. Interpreting
+the word \emph{kernel} as meaning something like \emph{core} or
+\emph{seed}, this usage in group theory makes sense when thinking about
+\href{https://en.wikipedia.org/wiki/Fundamental_theorem_on_homomorphisms\#Group_theoretic_version}{the
+first isomorphism theorem}.
+
+In the context of SVMs, the name \emph{kernel} comes from the idea of a
+\href{https://en.wikipedia.org/wiki/Positive-definite_kernel}{positive-definite
+kernel}, which originated mainly in work done by James Mercer, although
+as far as I can tell the actual name \emph{positive-definite kernel}
+came from a 1904 paper of David Hilbert on Fredholm integral equations
+of the second kind.
+
+Based on \href{http://math.stackexchange.com/a/1281138/10785}{this
+math.stackexchange answer}, it sounds like the group-theoretic and
+algebraic use cases --- that is, the two listed above --- of the word
+\emph{kernel} are not formally linked. Rather, it seems that Ivar
+Fredholm used the French word \emph{noyau} in a paper on integral
+equations that later became \emph{kernel} in the aforementioned paper of
+Hilbert. \emph{Noyau} roughly means \emph{core}, and was perhaps used
+because it is inside an integral when a convolution is performed. The
+referenced answer states that the original Hilbert paper never justifies
+the term, so I suppose it's up to folks who understand that paper to
+make an educated guess as to why it was chosen; or by looking at the
+corresponding Fredholm paper.
+
+\subsubsection{The Gaussian kernel}\label{the-gaussian-kernel}
+
+NEXT: justify why this is a kernel
+
 \hypertarget{refs}{}
 
 \end{document}
