cs229: minor: add link to lecture notes 3.

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -584,6 +584,9 @@ implementation issue.
 
 # On lecture notes 3
 
+The notes in this section are based on
+[lecture notes 3](http://cs229.stanford.edu/notes/cs229-notes3.pdf).
+
 ## Support vector machines
 
 At one point, Ng says that any constraint on $w$ will work to avoid the problem
