--- a/ml_notes/cs229/cs229.tex
+++ b/ml_notes/cs229/cs229.tex
@@ -688,6 +688,10 @@ potential implementation issue.
 
 \section{On lecture notes 3}\label{on-lecture-notes-3}
 
+The notes in this section are based on
+\href{http://cs229.stanford.edu/notes/cs229-notes3.pdf}{lecture notes
+3}.
+
 \subsection{Support vector machines}\label{support-vector-machines}
 
 At one point, Ng says that any constraint on \(w\) will work to avoid
