--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -763,3 +763,16 @@ $$\begin{aligned}
 \end{aligned}$$
 
 which completes the proof.
+
+### Sequential minimal optimization (SMO)
+
+SMO can be used to solve the dual optimization problem for support
+vector machines.
+I wonder: Can an SMO approach be used to solve a general
+linear or quadratic programming problem?
+
+The original SMO paper by John Platt specifically applied the algorithm to
+support vector machines. Based on a quick search, I don't see any applications
+of SMO to other fields or problems. I could be missing something, but my answer
+so far is that SMO either hasn't been tried or simply doesn't offer new value as
+a more general approach.
