--- a/ml_notes/cs229/cs229hw.tex
+++ b/ml_notes/cs229/cs229hw.tex
@@ -798,4 +798,69 @@ via the equation
 
 where \(\lambda\) is the wavelength.
 
+ii
+
+Here is the code:
+
+\begin{verbatim}
+#!/usr/bin/env python
+"""Problem 1_5b_ii.py
+
+Graph the first row of data along with a locally weighted
+linear regression.
+"""
+
+import matplotlib.pyplot as plt
+import numpy as np
+import numpy.linalg as la
+
+
+# A function to solve locally weighted linear regression for
+# given matrices X and W.
+def lwlr_theta(X, W, y):
+  A = X.T.dot(W)
+  B = A.dot(X)
+  return la.inv(B).dot(A).dot(y)
+
+def lwlr_at_pt(all_x, y, query_x):
+  X     = np.vstack((np.ones(len(all_x)), all_x)).T
+  x     = query_x
+  tau   = 5
+  denom = 2.0 * tau ** 2
+  w     = np.exp([-(x - xi) ** 2/denom for xi in all_x])
+  W     = np.diag(w)
+  theta = lwlr_theta(X, W, y)
+  return theta[0] + theta[1] * query_x
+
+def main():
+  # Load the data.
+  all_data = np.loadtxt('quasar_train.csv', delimiter=',')
+  lambdas  = all_data[0, :]
+  data     = all_data[1:, :]
+  row1     = data[0, :]
+
+  # Compute the LWLR curve at each lambda.
+  curve = [lwlr_at_pt(lambdas, row1, x) for x in lambdas]
+
+  # Plot the data and line.
+  plt.plot(lambdas, row1, 'o', label='spectra data',
+      markersize=2)
+  plt.plot(lambdas, curve, 'r', label='LWLR curve')
+  plt.title('Problem 1.5(b)ii')
+  plt.legend()
+  plt.show()
+
+if __name__ == '__main__': main()
+\end{verbatim}
+
+Here is the graph generated:
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{images/pr1_5bii.png}
+\caption{The first row of quasar spectra data plotted against
+wavelengths along with the curve resulting from a locally weighted
+linear regression with \(\tau = 5.\)}
+\end{figure}
+
 \end{document}
