--- a/ml_notes/cs229/cs229.tex
+++ b/ml_notes/cs229/cs229.tex
@@ -882,6 +882,42 @@ applications of SMO to other fields or problems. I could be missing
 something, but my answer so far is that SMO either hasn't been tried or
 simply doesn't offer new value as a more general approach.
 
+TODO any remaining notes from lecture notes 3
+
+\section{On lecture notes 4}\label{on-lecture-notes-4}
+
+The notes in this section are based on
+\href{http://cs229.stanford.edu/notes/cs229-notes4.pdf}{lecture notes
+4}.
+
+\subsection{\texorpdfstring{The question of \(k\) in the case of finite
+\(\mathcal H\)}{The question of k in the case of finite \textbackslash{}mathcal H}}\label{the-question-of-k-in-the-case-of-finite-mathcal-h}
+
+\newcommand{\eps}{\epsilon}
+
+In the case of finite \(\mathcal H,\) I was confused for a moment about
+the need to include \(k\) in the following line of thinking:
+
+\[\begin{aligned}
+\eps (\hat h) & \le \hat\eps (\hat h) + \gamma \\
+              & \le \hat\eps (h^*) + \gamma \\
+              & \le \eps     (h^*) + 2 \gamma. \\
+\end{aligned}\]
+
+This argument is given in the context of
+
+\[\gamma = \sqrt{\frac{1}{2m}\log\frac{2k}{\delta}},\]
+
+where is where the value \(k = |\mathcal H|\) comes in.
+
+My confusion arose because the line of inequalities only involve two
+particular hypotheses, \(\hat h\) and \(h^*,\) so that it seems
+unnecessary to build the value of \(\gamma\) on top of a limit for
+\emph{all} possibly hypotheses in \(\mathcal H.\) However, I realized
+that the exact value of \(\hat h\) is in fact dependent on the entire
+set \(\mathcal H,\) and so the same argument given with \(k\) replaced
+by 2 would no longer be sound.
+
 \hypertarget{refs}{}
 
 \end{document}
