cs229: add note on infinite H case informal argmnt

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -809,3 +809,28 @@ of $\gamma$ on top of a limit for *all* possibly hypotheses in $\mathcal H.$
 However, I realized that the exact value of $\hat h$ is in fact dependent on the
 entire set $\mathcal H,$ and so the same argument given with $k$ replaced by 2
 would no longer be sound.
+
+## The informal argument for infinite $\mathcal H$
+
+In this part of the notes, Ng argues that we may informally consider a
+theoretically infinite
+hypothesis space with $p$ parameters as something like a finite space with 
+$\log(k) = O(p)$ since it can be represented with a single floating-point number
+per parameter. However, he also proposed the counterargument that we could have
+inefficiently used twice as many variables in a program to represent the same
+hypothesis space. I disagree with this counterargument on the basis that the
+actual number of hypothesis functions represented is identical, and we can count
+$k$ based on this number. To put it slightly more formally, suppose we have two
+sets of functions,
+
+$$H_1 = \{f_p: p\in P_1\} \quad\text{and}\quad H_2 = \{f_p: p\in P_2\},$$
+
+where $f_p$ represents a hypothesis function specified by parameters $p.$
+To fit Ng's example, $P_1$ could be a list of $p$ 64-bit doubles while elements
+of
+$P_2$ could inefficiently hold $2p$ doubles. However, despite the sets $P_1$ and
+$P_2$ having different sizes, the sets $H_1$ and $H_2$ have the same size, thus
+helping to abstract away implementation details.
+
+
+
