cs229: ps1: more work on problem 5.

--- a/ml_notes/cs229/cs229hw.tex
+++ b/ml_notes/cs229/cs229hw.tex
@@ -863,4 +863,24 @@ wavelengths along with the curve resulting from a locally weighted
 linear regression with \(\tau = 5.\)}
 \end{figure}
 
+iii
+
+In this problem, we repeat part ii, except with the \(\tau\) values 1,
+10, 100, and 1000.
+
+The code is similar to the above. Here is the graph generated:
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{images/pr1_5biii.png}
+\caption{The first row of quasar spectra data plotted against
+wavelengths along with the curves resulting from locally weighted linear
+regressions with \(\tau = 1, 10, 100,\) and 1000.}
+\end{figure}
+
+As \(\tau\) increases, the resulting LWLR curve becomes smoother.
+Smaller \(\tau\) values allow for more variation at a local level, thus
+fitting the data more closely, but also enabling wild variations due to
+noise.
+
 \end{document}
