--- a/self_repl_fns/self_repl_fns_for_kindle.tex
+++ b/self_repl_fns/self_repl_fns_for_kindle.tex
@@ -106,13 +106,12 @@ Like the word \emph{fractal}, this term is not rigorously defined --- in
 particular, it depends on the ambiguous notion of ``strong resemblance''
 --- although I plan to investigate more precise requirements below.
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
 \includegraphics{images/pdfs/added_normals4.pdf}
-\caption{\label{fig:added_normals}As an example of a self-replicating
-function, the normal curve can be expressed as the sum of two
-normal-like curves that are reflections of each
-other.}\label{fig:addedux5fnormals}
+\caption{As an example of a self-replicating function, the normal curve
+can be expressed as the sum of two normal-like curves that are
+reflections of each other.}\label{fig:added_normals}
 \end{figure}
 
 \section{Motivation}\label{motivation}
@@ -142,13 +141,12 @@ redundancy, the right-hand figure shows the exact same \emph{L}-system
 with essentially half of the tree removed --- yet the shape formed by
 the leaf points is only slightly changed.
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
 \includegraphics{images/pdfs/ellsystem2.pdf}
-\caption{\label{fig:ellsystem}Left: An \emph{L}-system; Right: the same
-system with two large subtrees removed. In both cases, a histogram of
-leaf point density is provided around an outer
-ellipse.}\label{fig:ellsystem}
+\caption{Left: An \emph{L}-system; Right: the same system with two large
+subtrees removed. In both cases, a histogram of leaf point density is
+provided around an outer ellipse.}\label{fig:ellsystem}
 \end{figure}
 
 One approach to smoothing out the distribution of leaf points would be
@@ -160,12 +158,12 @@ distance from the trunk point form a set of equidistant angles from a
 central point. The result is an extremely regular edge, as seen in
 figure~\ref{fig:well_dist}.
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
 \includegraphics{images/pdfs/well_distributed_ell_like_system.pdf}
-\caption{\label{fig:well_dist}A \emph{L}-like system in which line
-directions are chosen to maximize the regularity of leaf point
-distribution.}\label{fig:wellux5fdist}
+\caption{A \emph{L}-like system in which line directions are chosen to
+maximize the regularity of leaf point
+distribution.}\label{fig:well_dist}
 \end{figure}
 
 This is ideally efficient in that each leaf point is equally important
@@ -237,12 +235,11 @@ function \([x\in[a, b)]\). The following equation shows how such
 indicator functions can be considered simple self-replicating functions:
 \(I_{[0, 2)} = I_{[0, 1)} + I_{[1, 2)}\).
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
 \includegraphics{images/pdfs/added_intervals6.pdf}
-\caption{\label{fig:added_intervals}Visual representation of the
-addition of indicator functions of
-intervals.}\label{fig:addedux5fintervals}
+\caption{Visual representation of the addition of indicator functions of
+intervals.}\label{fig:added_intervals}
 \end{figure}
 
 In order to match the equation \(f = g_1 + g_2\), emphasizing the
@@ -250,7 +247,7 @@ similarity between the \(g_i\)'s and \(f\), we can set
 \(f = I_{[0, 2)}\), \(g_1 = f(2x) = I_{[0, 1)}\), and
 \(g_2 = f(2(x - 1)) = I_{[1, 2)}\).
 
-\subsection{Ramp functions}\label{sec:rampux5ffunctions}
+\subsection{Ramp functions}\label{sec:ramp_functions}
 
 Things get more interesting when \(g_1(x) g_2(x) \ne 0\) for some \(x\).
 To this end, define the \emph{ramp function} for values \(a,b,c,d\) with
@@ -266,11 +263,11 @@ To this end, define the \emph{ramp function} for values \(a,b,c,d\) with
 Then \(J_{0,1,4,5} = J_{0,1,2,3} + J_{2,3,4,5}\), as illustrated in
 figure~\ref{fig:ramp_fns}.
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
 \includegraphics{images/pdfs/ramp_fns3.pdf}
-\caption{\label{fig:ramp_fns}Visual addition of two ramp functions to
-form another.}\label{fig:rampux5ffns}
+\caption{Visual addition of two ramp functions to form
+another.}\label{fig:ramp_fns}
 \end{figure}
 
 The ramp function example gives me four ideas for further study:
@@ -317,21 +314,21 @@ The ramp function example gives me four ideas for further study:
   the Cantor dust?
 \end{enumerate}
 
-TODO Mention how I'm following up with further study idea 1.
+Some of these questions will be answered below.
 
-\subsection{Nonlinear ramps}\label{sec:nonlinearux5framps}
+\subsection{Nonlinear ramps}\label{sec:nonlinear_ramps}
 
 Other curves that sum to 1 could easily take the place of the left and
 right edges of the ramp function. For example, the left and right ramps
 could be replaced by curves with the shapes of \(x^2\) and \(1-x^2\) on
 \(x\in [0, 1]\), as illustrated in figure~\ref{fig:nonlinear_ramps}.
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
 \includegraphics{images/pdfs/nonlinear_ramps2.pdf}
-\caption{\label{fig:nonlinear_ramps}An example of nonlinear ramp
-functions using \(x^2\) on \(x\in [0, 1]\) to determine the edge
-shapes.}\label{fig:nonlinearux5framps}
+\caption{An example of nonlinear ramp functions using \(x^2\) on
+\(x\in [0, 1]\) to determine the edge
+shapes.}\label{fig:nonlinear_ramps}
 \end{figure}
 
 Given any function \(f:[0,1]\to [0,1]\), the generalized ramp function
@@ -362,13 +359,12 @@ monotonic} iff there is a point \(x\) such that
 interval and the ramp function are both peak monotonic, while the
 example \(K-\)functions in figure~\ref{fig:other_ramps} are not.
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
 \includegraphics{images/pdfs/other_ramps2.pdf}
-\caption{\label{fig:other_ramps}Example \(K-\)functions: on the top is a
-function more discontinuous than the indicator function of an interval;
-on the bottom is a continuous but non-peak-monotonic
-function.}\label{fig:otherux5framps}
+\caption{Example \(K-\)functions: on the top is a function more
+discontinuous than the indicator function of an interval; on the bottom
+is a continuous but non-peak-monotonic function.}\label{fig:other_ramps}
 \end{figure}
 
 \subsection{Non-plateau functions}\label{non-plateau-functions}
@@ -412,9 +408,9 @@ the \emph{sum}; the \(s\) function suggests a \emph{shift}, while the
 equation in (\ref{eq:exact_defn}) captures the similarity relationship
 between the addend \(f = f_L\) and the sum \(f_S = f_L + f_R\).
 
-\textbf{Example} The ramp functions given in
-§\ref{sec:rampux5ffunctions} and §\ref{sec:nonlinearux5framps}, viewed
-as \(K-\)functions, all adhere to the general form
+\textbf{Example} The ramp functions given in §\ref{sec:ramp_functions}
+and §\ref{sec:nonlinear_ramps}, viewed as \(K-\)functions, all adhere to
+the general form
 
 \[K_{0,1,2,3} + K_{2,3,4,5} = K_{0,1,4,5}.\]
 
@@ -468,12 +464,11 @@ g   & = & r_L + r_R.
 
 Conceptually, \(r_L\) and \(r_R\) are the left and right ramp functions.
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
 \includegraphics{images/pdfs/nonpl_setup.pdf}
-\caption{\label{fig:nonpl_setup}An example showing how \(r_L\), \(r_R\),
-and \(g\) are extracted from a function \(f\), shown on
-top.}\label{fig:nonplux5fsetup}
+\caption{An example showing how \(r_L\), \(r_R\), and \(g\) are
+extracted from a function \(f\), shown on top.}\label{fig:nonpl_setup}
 \end{figure}
 
 I'll show that many copies of the shape of \(g\) must dominate the
@@ -563,14 +558,13 @@ Define the sets \(G_k\) and \(G\) via
 Figure~\ref{fig:nonpl_process} illustrates \(G_k\) for low values of
 \(k\).
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
 \includegraphics{images/pdfs/nonpl_process.pdf}
-\caption{\label{fig:nonpl_process}The inductive process in the proof of
-theorem 1. The top line is the domain \([0,5]\) of \(\,f_S\); the line
-below that is the domain \([0,3]\) of \(\,f;\) then the subsets of
-\([1,2]\) on which \(f\) is described as the induction
-proceeds.}\label{fig:nonplux5fprocess}
+\caption{The inductive process in the proof of theorem 1. The top line
+is the domain \([0,5]\) of \(\,f_S\); the line below that is the domain
+\([0,3]\) of \(\,f;\) then the subsets of \([1,2]\) on which \(f\) is
+described as the induction proceeds.}\label{fig:nonpl_process}
 \end{figure}
 
 Let's check that the sets \(G_k\) are disjoint. Suppose \(x_j\in G_j\)
@@ -761,116 +755,18 @@ Below is an example image depicting the function we get by choosing
 \(r_L(x) = \cos(2x)/2 + 1/4\) and \(r_R(x) = r_L(1-x)\). The \(h\)
 function has the constant value \(r_L(0) + r_R(0)\).
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
 \includegraphics{images/pdfs/nonplateau.pdf}
-\caption{\label{fig:nonplateau}An exactly self-replicating function
-\(f\) completely determined by \(r_L(x) = \cos(2x)/2 + 1/4\),
-\(r_R(x) = r_L(1 - x)\), and the value \(f(x) = r_L(0) + r_R(0)\) for
-all \(x\) not determined by \(r_L\) and \(r_R\).}\label{fig:nonplateau}
+\caption{An exactly self-replicating function \(f\) completely
+determined by \(r_L(x) = \cos(2x)/2 + 1/4\), \(r_R(x) = r_L(1 - x)\),
+and the value \(f(x) = r_L(0) + r_R(0)\) for all \(x\) not determined by
+\(r_L\) and \(r_R\).}\label{fig:nonplateau}
 \end{figure}
 
 Next I'll examine a famous function which is \emph{not} exactly
 self-replicating, but which can be seen as approximately
 self-replicating: the normal curve.
-
-\section{The normal curve}\label{the-normal-curve}
-
-TODO better segue here. start with a high-level summary of what's next,
-including the current image
-
-The normal curve is described by \(y = e^{-x^2/2}\).
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{images/pdfs/normal3.pdf}
-\caption{The normal curve: \(y=e^{-x^2/2}\).}
-\end{figure}
-
-One general way to look for self-replicating functions is to begin with
-a function considered as the sum \(f_S\), and then to use a
-nondecreasing function \(s\) with range \([0,1]\) to split \(f_S\) into
-the pieces \(f_L = (1 - s)\cdot f_S\) and \(f_R = s\cdot f_S\). There's
-no immediate reason for all three of these functions to resemble each
-other, so the challenge is to choose function pairs \((s, f_S)\) so that
-this decomposition is indeed self-replicating.
-
-Let's define a \emph{sigmoid function} \(s:\R\to\R\) as a nondecreasing
-function with range in \([0, 1]\), and such that \(s-1/2\) is an odd
-function. If \(f_S\) is an even function, then it seems natural to
-choose a sigmoid function to split \(f_S\) into \(f_L\) and \(f_R\) as
-described in the last paragraph. Under these conditions, we have the
-symmetry given by \(f_L(x) = f_R(-x)\). This can be seen by observing
-that
-
-\[1/2 - s(x) = s(-x) - 1/2 \quad\Rightarrow\quad
-1 - s(x) = s(-x).\]
-
-Then \(f_R(-x) = s(-x)\,f_S(-x) = (1-s(x))\,f_S(x) = f_L(x)\),
-confirming the claimed symmetry.
-
-There are various sigmoid functions available. A simple one is given by
-\(x/(1+|x|)\). A more commonly-used one is the \emph{logistic function}
-given by \(s(x) = 1/(1 + e^{-x})\), which is the one I'll focus on in
-this section.
-
-TODO Lead up to the main split of the normal curve I'm going after.
-
-\section{\texorpdfstring{Leaf-point distributions of
-\emph{L}-systems}{Leaf-point distributions of L-systems}}\label{leaf-point-distributions-of-l-systems}
-
-\section{Fractal functions}\label{fractal-functions}
-
-This section is for functions similar to the Cantor diagonal. It may
-turn out that I can't find any functions that fit here, or that the
-\emph{L}-systems distributions includes this case, or even that I can
-prove that no functions could exist here (as far as I know).
-
-TODO Add a note somewhere that the initial setup requires that the sum
-itself is always the translation of an even function.
-
-\section{Temporary example content}\label{temporary-example-content}
-
-\textbf{Lemma 1}~ \emph{Content of lemma 1, including some \(\pi+3\)
-mathy bits.}
-
-\subsection{Subheader}\label{subheader}
-
-Content
-
-See my notes on Raney's lemmas for more examples.
-
-Here is a reference (Knuth, Patashnik, and Graham 1997).
-
-\section{Questions}\label{questions}
-
-\begin{itemize}
-\tightlist
-\item
-  The ellipse around my first \emph{L}-system appears to fit
-  surprisingly well. Is there a nice way to discover when an ellipse and
-  an \emph{L}-system may fit like this? Is there, perhaps, a series of
-  shapes which converge on the system or its leaf points, analogous to
-  \href{http://mathworld.wolfram.com/MandelbrotSetLemniscate.html}{Mandelbrot
-  set lemniscates}?
-\item
-  The histogram around my first \emph{L}-system appears simple in shape.
-  Can its shape be described precisely?
-\item
-  The sigmoid \(\sigma(x)=1/(1+e^{-x})\) provides a
-  near-self-replicating split of \(e^{-x^2}\). Is there a function
-  \(f(x)\) such that \(\sigma(x)\) provides an \emph{exact}
-  self-replicating split? More than one? In general, given any sigmoid
-  \(s(x)\), what is the set of functions which it splits exactly in this
-  way? For this question, we can have some precise requirement for a
-  sigmoid, such as being an appropriately scaled and translated odd
-  function.
-\item
-  Are there variants of self-replicating functions that work for other
-  sets of operations such as using more than two copies of the function
-  in a sum, or by using multiplication or some other operation instead
-  of addition?
-\end{itemize}
 
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
@@ -879,10 +775,5 @@ Here is a reference (Knuth, Patashnik, and Graham 1997).
 \hypertarget{ref-taocp1}{}
 Knuth, Donald E. 1998. \emph{Fundamental Algorithms}. Third Ed. Vol. 1.
 The Art of Computer Programming. Addison-Wesley.
-
-\hypertarget{ref-concrete}{}
-Knuth, Donald E., Oren Patashnik, and Ronald L. Graham. 1997.
-\emph{Concrete Mathematics: A Foundation for Computer Science}.
-Addison-Wesley.
 
 \end{document}
